src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <inlineHelpText>To which area is the user assigned? e.g. NCW, SFL, etc.</inlineHelpText>
        <label>Area</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Partner__c</fullName>
        <description>Business Partner #</description>
        <externalId>true</externalId>
        <label>Business Partner #</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opt_In_for_Procedure_Scheduler_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This gives you access to receive email notifications when a procedure is scheduled and assigned to you.</description>
        <inlineHelpText>This gives you access to receive email notifications when a procedure is scheduled and assigned to you.</inlineHelpText>
        <label>Opt-In for Procedure Scheduler Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Line__c</fullName>
        <label>Primary Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HFM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>To which region is the user assigned? e.g. NCW1, SFL2, etc.</inlineHelpText>
        <label>Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SJM_HR_Number__c</fullName>
        <externalId>true</externalId>
        <label>SJM HR Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduler_Country_Code__c</fullName>
        <label>Scheduler Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Regions__c</fullName>
        <label>Secondary Regions</label>
        <picklist>
            <picklistValues>
                <fullName>NCW1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCW2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSP1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSP2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAS0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFL0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFL4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMA0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMA2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMA3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMA4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENA2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENA3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENA4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENA5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENE2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENE3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENE4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENE5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENE6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESA3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESA4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESA5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserProfileType__c</fullName>
        <formula>IF(CONTAINS(Profile.Name, &quot;DSA&quot;),&apos;Connect&apos;,
 IF(CONTAINS(Profile.Name, &quot;CM&quot;),&apos;Sales Users&apos;,
  IF(CONTAINS(Profile.Name, &quot;IL&quot;),&apos;IntegratedLab&apos;,
   IF(CONTAINS(Profile.Name, &quot;SJM Sales User&quot;),&apos;Sales Users&apos;,
    IF(CONTAINS(Profile.Name, &quot;SJM Force.com User&quot;),&apos;Tracker Users&apos;,
    IF(CONTAINS(Profile.Name, &quot;ANZ&quot;),&apos;ANZ Users&apos;,
     IF(CONTAINS(Profile.Name, &quot;SJM Business Admin&quot;),&apos;Marketing/Finance&apos;,&apos;Other&apos;
    
    )
   )
  )
 )
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserProfileType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Category__c</fullName>
        <description>Customer Service</description>
        <label>User Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Geography_Location__c</fullName>
        <formula>IF(ISBLANK(Country), &quot;Other&quot;, CASE( Country , &quot;US&quot;, &quot;US&quot;, &quot;USA&quot;, &quot;US&quot;, 
&quot;CA&quot;,&quot;US&quot;,&quot;JP&quot;,&quot;APAC&quot;,&quot;AU&quot;,&quot;APAC&quot;,&quot;NZ&quot;,&quot;APAC&quot;,&quot;EMEA&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Geography Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Group__c</fullName>
        <description>User Group</description>
        <formula>IF(CONTAINS(Profile.Name, &quot;System Administrator&quot;),&apos;Sys Admin&apos;,
IF(CONTAINS(Profile.Name, &quot;DSA&quot;),&apos;Connect&apos;,
   IF(CONTAINS(Profile.Name, &quot;SJM Business Admin&quot;),&apos;Business Admin&apos;,
   IF(CONTAINS(Profile.Name, &quot;ANZ&quot;),&apos;ANZ&apos;,
   IF(CONTAINS(Profile.Name, &quot;Chatter&quot;),&apos;ChatterFree&apos;,

     IF(CONTAINS(Profile.Name, &quot;Contract Operations Analyst&quot;),&apos;Contract Ops&apos;,
    IF(CONTAINS( User_Category__c , &quot;OppMan-Capital&quot;),&apos;OppMan-Capital Sales&apos;,
     IF(CONTAINS( User_Category__c , &quot;OppMan-DBS-US&quot;),&apos;OppMan-DBS-US&apos;,
 IF(CONTAINS( User_Category__c , &quot;OppMan-DBS-OUS&quot;),&apos;OppMan-DBS-OUS&apos;,
       IF(CONTAINS( User_Category__c , &quot;OppMan-HFM&quot;),&apos;OppMan-HFM&apos;,
        IF(CONTAINS( User_Category__c , &quot;HFS-HFM&quot;),&apos;HFS&apos;,
       IF(CONTAINS( User_Category__c , &quot;Service Plan Sales&quot;),&apos;Service-Plan Sales&apos;,
       IF(CONTAINS( User_Category__c , &quot;Tracker&quot;),&apos;Tracker&apos;,
         IF(CONTAINS( User_Category__c , &quot;Act_Mgmt-DBS&quot;),&apos;Act_Mgmt-DBS&apos;,
        IF(CONTAINS( User_Category__c , &quot;FIT&quot;),&apos;FIT&apos;,&apos;Other&apos;)
)
)
        )
       )

     )
    )
   )
)
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>Type of user - Drives visibility</description>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>TSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Unique__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Unique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ANZ_Standard_and_Platform_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>ANZ Standard User</value>
        </filters>
        <label>ANZ Standard and Platform Users</label>
        <sharedTo>
            <role>ANZ_SJM_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>